force-app/main/default/objects/Session__c/fields/Venue_County__c.field-meta.xml
<CustomField>
    <fullName>Venue_County__c</fullName>
    <formula>IF( NOT( ISBLANK(Venue__c) ),
 IF( ISBLANK( Venue__r.Host__c ),
  Venue__r.County__c,
   Venue__r.Host__r.MailingState 
 ),
 Parent_Host__r.MailingState
)</formula>
    <label>Venue County</label>
    <type>Text</type>
</CustomField>