force-app/main/default/objects/Session__c/fields/Venue_Id__c.field-meta.xml
<CustomField>
    <fullName>Venue_Id__c</fullName>
    <formula>IF(ISBLANK(Venue__c), IF(ISBLANK(Parent_Host__c),&#39;&#39;,Parent_Host__c), Venue__c)</formula>
    <label>Venue Id</label>
    <type>Text</type>
</CustomField>