force-app/main/default/objects/Session__c/fields/Venue_Invoice_Paid__c.field-meta.xml
<CustomField>
    <fullName>Venue_Invoice_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Venue Invoice Paid</label>
    <type>Checkbox</type>
</CustomField>