force-app/main/default/objects/Session__c/fields/Venue_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Venue_Postcode__c</fullName>
    <formula>IF( NOT( ISBLANK(Venue__c) ),
 IF( ISBLANK( Venue__r.Host__c ),
  Venue__r.Postcode__c,
  Venue__r.Host__r.MailingPostalCode
 ),
 Parent_Host__r.MailingPostalCode
)</formula>
    <label>Venue Postcode</label>
    <type>Text</type>
</CustomField>