force-app/main/default/objects/Session__c/fields/Venue_Street__c.field-meta.xml
<CustomField>
    <fullName>Venue_Street__c</fullName>
    <formula>IF( NOT( ISBLANK(Venue__c) ),
 IF( ISBLANK( Venue__r.Host__c ),
  Venue__r.Street_Address__c,
  Venue__r.Host__r.MailingStreet
 ),
 Parent_Host__r.MailingStreet
)</formula>
    <label>Venue Street</label>
    <type>Text</type>
</CustomField>