force-app/main/default/objects/Session__c/recordTypes/Adhoc_Support.recordType-meta.xml
<RecordType>
    <fullName>Adhoc_Support</fullName>
    <active>true</active>
    <label>Adhoc Support</label>
</RecordType>