force-app/main/default/objects/Session__c/recordTypes/Scheduled_Session.recordType-meta.xml
<RecordType>
    <fullName>Scheduled_Session</fullName>
    <active>true</active>
    <label>Scheduled Session</label>
</RecordType>