force-app/main/default/objects/Session__c/validationRules/Check_Can_Confirm_Reunion_Session.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Can_Confirm_Reunion_Session</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c , &quot;Confirmed&quot;)&amp;&amp; ISPICKVAL(Type__c , &quot;Reunion&quot;) &amp;&amp; ISBLANK(Practitioner__c )</errorConditionFormula>
    <errorMessage>Ensure that the Practitioner has been populated before marking the reunion as confirmed</errorMessage>
</ValidationRule>