force-app/main/default/objects/Session__c/validationRules/End_time_should_not_be_before_start_time.validationRule-meta.xml
<ValidationRule>
    <fullName>End_time_should_not_be_before_start_time</fullName>
    <active>true</active>
    <errorConditionFormula>End__c   &lt;=   Start__c</errorConditionFormula>
    <errorDisplayField>End__c</errorDisplayField>
    <errorMessage>Session end time must be later than session start time.</errorMessage>
</ValidationRule>