force-app/main/default/objects/Session__c/validationRules/Prevent_Edit_Session_If_CAD_Submitted.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Edit_Session_If_CAD_Submitted</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Course_Assignment__c)), ISPICKVAL(Course_Assignment__r.Status__c, &#39;Submitted or Approved&#39;))</errorConditionFormula>
    <errorMessage>This session is linked to a submitted course assignment record. Please invalidate the course assignment before editing the session.</errorMessage>
</ValidationRule>