force-app/main/default/objects/Session__c/validationRules/Prevent_private_reunion_confirmation.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_private_reunion_confirmation</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(Status__c , &quot;Confirmed&quot;)&amp;&amp; ISPICKVAL(Type__c , &quot;Reunion&quot;) &amp;&amp; IsPublicVenue__c &amp;&amp; ISBLANK(Parent_Host__c)</errorConditionFormula>
    <errorDisplayField>Parent_Host__c</errorDisplayField>
    <errorMessage>Your Private Reunion Session must have Parent Host set</errorMessage>
</ValidationRule>