force-app/main/default/objects/Session__c/validationRules/Selection_parent_host_venue_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Selection_parent_host_venue_rule</fullName>
    <active>true</active>
    <description>Should not assign parent host and venue on the same record</description>
    <errorConditionFormula>NOT( ISBLANK(Venue__c) ) &amp;&amp; 
NOT( ISBLANK(Parent_Host__c) )

&amp;&amp; NOT( $Permission.Override_Session_Validation )</errorConditionFormula>
    <errorMessage>Please either select a venue or choose parent host</errorMessage>
</ValidationRule>