force-app/main/default/objects/Session__c/validationRules/Session_Confirmation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Session_Confirmation_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c , &quot;Confirmed&quot;)&amp;&amp; NOT(ISPICKVAL(Type__c , &quot;Reunion&quot;)) &amp;&amp; OR((ISBLANK(Practitioner__c)),(ISBLANK(Venue__c)))</errorConditionFormula>
    <errorMessage>Ensure that the Practitioner and Venue have been populated before marking the session as confirmed</errorMessage>
</ValidationRule>