force-app/main/default/objects/Session__c/listViews/Upcoming_Sessions.listView-meta.xml
<ListView>
    <fullName>Upcoming_Sessions</fullName>
    <columns>Date__c</columns>
    <columns>Day_of_Week__c</columns>
    <columns>Start__c</columns>
    <columns>End__c</columns>
    <columns>Venue__c</columns>
    <columns>PSA_Area__c</columns>
    <columns>Course__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Upcoming Sessions</label>
    <language>en_US</language>
</ListView>